--- a/FirmaSiparis.ENTITIES/FirmaSiparis.ENTITIES.csproj
+++ b/FirmaSiparis.ENTITIES/FirmaSiparis.ENTITIES.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Mapping\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FirmaSiparis.CORE\FirmaSiparis.CORE.csproj" />
+  </ItemGroup>
+
 </Project>
