--- a/FirmaSiparis.CORE/FirmaSiparis.CORE.csproj
+++ b/FirmaSiparis.CORE/FirmaSiparis.CORE.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
+  </ItemGroup>
+
 </Project>
