--- a/FirmaSiparis.DATAACCESS/FirmaSiparis.DATAACCESS.csproj
+++ b/FirmaSiparis.DATAACCESS/FirmaSiparis.DATAACCESS.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
@@ -21,6 +20,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FirmaSiparis.ENTITIES\FirmaSiparis.ENTITIES.csproj" />
   </ItemGroup>
 
 </Project>
